# timecraft

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  CORRECOES_REALIZADAS.md  CORRECTIONS_FINAL.md  FILES_ORG.txt  INSTALL.md  INSTALL_AI.md  LICENSE  Makefile  ORG_FILES.txt  README.md  README_pt-BR.md  RESTRUCTURE_REPORT.md  SECURITY.md  STT_OPTIMIZATION_REPORT.md  SUPPORT.md  __init__.py  apply_stt_improvements.py  demo_timecraft_ai.py  dev.sh  index.html  mkdocs.yml  playground.py  pyproject.toml  requirements-ai.txt  requirements.txt  run_mcp.sh  sitemap.xml  start_mcp_servers.sh  stdout  test_hotword_simple.py  test_stt_mock.py  test_stt_optimized.py  test_timecraft_ai.py  (+1 more)
.github/: FUNDING.yml  pull_request_template.md
.github/.copilot/instructions/: timecraft.instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  issue-template.yml  question.md
.github/workflows/: ci.yml  gh-pages.yml  publish.yml  release.yml
CODE_OF_CONDUCT/: index.html
INSTALL/: index.html
INSTALL_AI/: index.html
NOTICE/: index.html
README.en/: index.html
README.pt-BR/: index.html
docs/: CHANGELOG.md  INSTALL.md  NOTICE.md  README.en.md  README.md  README.pt-BR.md  SESSION_SUMMARY.md  STT_OPTIMIZATION_REPORT.md  VOICE_SYSTEM_COMPLETE.md  index.html  index.md
docs/assets/: manifest.json  site.webmanifest
docs/assets/bootstrap/: bootstrap.css
docs/assets/l18n/: en.json  es-ES.json  pt-BR.json
docs/knowledge/: INSTALL.md  INSTALL_AI.md
docs/notebooks/: MLX_DATASET.ipynb  MLX_RUNNER.ipynb  TimeCraft_MSSQL.ipynb  TimeCraft_ORA_PG.ipynb
docs/standards/: CONTRIBUTING.md  SECURITY.md  SUPPORT.md
example/: plot_basic.py  plot_charts.py  test_regression.py  timeseries_correlation_test.py  timeseries_from_db.py  timeseries_from_db_mssql.py  timeseries_plot_basic.py  timeseries_plot_charts.py
example/notebooks/: TimeCraft_MSSQL.ipynb  TimeCraft_ORA_PG.ipynb
examples/: __init__.py  demo_advanced.py  demo_basic.py  plot_basic.py  plot_charts.py  quick_test.py  timeseries_correlation_test.py  timeseries_from_db_mssql.py  timeseries_from_db_report.py  timeseries_plot_basic.py  timeseries_plot_charts.py  validate_stt_system.py
examples/data/: CLI_X_PROD_CLI_SALE.sql.j2  EST_X_PROD_X_DATE-MSSQL.sql.j2  EST_X_PROD_X_DATE.sql.j2  hist_cambio.csv  hist_cambio_float.csv  sample_data.csv  teste.json
examples/notebooks/: MLX_DATASET.ipynb  MLX_RUNNER.ipynb
examples/output/products_stock/: forecast_estoque_5919.csv
search/: search_index.json
src/: README.md  __init__.py  pyproject.toml  pyproject.toml~  requirements.txt  setup.py  timecraft.py
src/classify/: __init__.py  classifier.py
src/dbconnect/: dbconnector.py
src/regression/: regression.py
src/tests/: test_mcp_core.py  test_timecraft_ai.py  test_timecraft_ai_ctb.py
src/timecraft/: __init__.py  model.py
src/timecraft/ai/: chatbot_timecraft.py  voice_synthesizer.py
src/timecraft/ml_compra_x_venda/: model.py
src/timecraft_ai/: LICENSE  __init__.py  audio_processor.py  chatbot_actions.py  chatbot_msgset.py  chatbot_timecraft.py  hotword_detector.py  mcp_command_handler.py  mcp_server.py  requirements.txt  timecraft_ai.py  voice_synthesizer.py
src/timecraft_ai/ai/: __init__.py  audio_processor.py  chatbot_msgset.py
src/timecraft_ai/core/: __init__.py  timecraft_ai.py
src/timecraft_ai/shared/: chainnable_exceptions.py  chainnable_runner.py
support/: action_validation.sh  config.sh  info.sh  main.sh  proc_fn.sh  runner_validation.sh  utils.sh
support/assets/: requirements-ai.txt  requirements-db.txt  requirements.txt
support/docs/: curl_usage.sh  mkdocs.yml
support/instructions/: python.md
support/tests/: test_first.bats
tests/: test_hotword.py  test_hotword_diagnostic.py  test_mcp_core.py  test_real_microphone.py  test_stt_mock.py  test_stt_optimized.py  test_stt_real.py  test_timecraft_ai copy.py  test_timecraft_ai.py  test_timecraft_ai_ctb.py  test_voice.py
timecraft_ai/: __init__.py  __main__.py  cli.py  flow.dag.yaml
timecraft_ai/ai/: __init__.py  audio_processor.py  chatbot_actions.py  chatbot_msgset.py  chatbot_timecraft.py  hotword_detector.py  mcp_server.py  pyper_voice_be.py  pyttsx3_voice_be.py  pyttsx3_voice_be_old.py  voice_synthesizer.py  voice_system_complete.py
timecraft_ai/core/: __init__.py  classifier_model.py  database_connection.py  linear_regression.py  timecraft_ai.py  timecraft_model.py  wrapper.py
timecraft_ai/mcp/: README.md  __init__.py  api_server.py  config_manager.py  curl_example.sh  curl_usage.sh  pyproject.toml  server.py  test_api.py  websocket_manager.py
timecraft_ai/mcp/aaa/: __init__.py  api_server.py  command_handler.py  mcp_wrapper.py  server.py
timecraft_ai/mcp/cmd/github/: dependabot_cmd.py
timecraft_ai/mcp/cmd/system/linux/helpers/github/: clean_git_history  quick_clean_history
timecraft_ai/mcp/cmd/system/linux/performance/: swap_manager
timecraft_ai/mcp/cmd/system/linux/security/snitcher-mtf/: dbus-snitcher  snitcher-mtf
timecraft_ai/mcp/cmd/system/linux/standards_opensource/.github/ISSUE_TEMPLATE/: config.yml  issue_template.md
timecraft_ai/mcp/cmd/system/linux/standards_opensource/.github/workflows/: latest-npm.yml  nvm-install-test.yml  shellcheck.yml  windows-npm.yml
timecraft_ai/shared/: __init__.py  chainnable_exceptions.py  chainnable_runner.py  notify_webhook.py  run_scheduled.py
