[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/timecraft_ai"]
include = ["src/timecraft_ai"]

# [tool.hatch.build.hooks]
# This hook is used to include additional files in the package
# distribution. You can specify the files to include in the `include` list.
# The files can be specified using glob patterns or by their absolute paths.
# The `include` list can also contain directories, in which case all files
# in the directory will be included.

# [tool.hatch.build.hooks.include]
# include = ["README.md", "LICENSE", "requirements.txt"]

[tool.hatch.version]
path = "src/timecraft/__init__.py"
version = { format = "patch" }

[tool.hatch.envs]
test = { test = "pytest" }
[tool.hatch.envs.lint]
test = { lint = "flake8" }
[tool.hatch.envs.docs]
test = { docs = "mkdocs serve" }

[tool.hatch.envs.coverage]
test = { coverage = "coverage run -m pytest" }
[tool.hatch.envs.coverage-report]
test = { coverage-report = "coverage report" }
[tool.hatch.envs.coverage-html]
test = { coverage-html = "coverage html" }
[tool.hatch.envs.coverage-xml]
test = { coverage-xml = "coverage xml" }
[tool.hatch.envs.coverage-html-report]
test = { coverage-html-report = "coverage html" }

[project]
name = "timecraft-ai"
version = "1.0.1"
requires-python = ">=3.11.1"
python_full_version = "3.11.1"
authors = [
  { name = "Rafael Mori", email = "faelmori@gmail.com" }
]
maintainers = [
  { name = "Rafael Mori", email = "faelmori@gmail.com" }
]
description = "A Python package for time series analysis and forecasting"
readme = "README.md"
license = { text = "MIT" }
keywords = ["time series", "database", "automation", "forecasting", "data analysis", "regression"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

dependencies = [
  "numpy>=1.21.0",
  "pandas>=2.2.3",
  "matplotlib>=3.4.0",
  "flask",
  "fastapi",
  "sqlalchemy",
  "pyodbc",
  "scikit-learn",
  "prophet",
  "requests",
  "jinja2",
  "mysql-connector-python",
  "pymongo",
  "xarray",
  "seaborn",
  "plotly",
  "fastapi>=0.115.12",
]

[project.optional-dependencies]
oracle = ["cx_Oracle"]
mssql = ["pymssql"]
ml = ["scikit-learn", "prophet"]
viz = ["seaborn", "plotly", "kaleido"]

[project.urls]
Homepage = "https://github.com/rafa-mori/timecraft"
Documentation = "https://github.com/rafa-mori/timecraft/docs"
Repository = "https://github.com/rafa-mori/timecraft"
"Bug Tracker" = "https://github.com/rafa-mori/timecraft/issues"

[project.scripts]
timecraft-cli = "timecraft.cli:main"

