[project]
name = "status_rafa_server"
version = "0.1.0"
description = "Acompanha PRs, pipelines e decisões anteriores para sugerir próximos passos"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp==1.10.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "fastmcp>=1.0",
]

[project.optional-dependencies]
dev = ["debugpy==1.8.8"]
